# Ctrl-F

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: audit.py  auth.py  chat.py  feedback.py  health.py  sources.py
backend/app/core/: config.py
backend/app/evaluation/: __init__.py  runner.py
backend/app/models/: __init__.py  audit.py  auth.py  chat.py  conversation.py  feedback.py  ingestion.py  source.py  user.py
backend/app/scripts/: __init__.py  run_evaluation.py  seed_demo_sources.py
backend/app/services/: answer_service.py  audit_service.py  auth_service.py  chunking_service.py  confidence_service.py  conversation_service.py  demo_source_service.py  document_loader.py  embedding_service.py  feedback_service.py  ingestion_service.py  retrieval_service.py  safety_service.py  source_service.py
backend/app/storage/: database.py  vector_store.py
backend/tests/: test_audit.py  test_auth.py  test_chat.py  test_demo_sources.py  test_embedding_provider.py  test_evaluation_runner.py  test_feedback.py  test_health.py  test_integration_chat_flow.py  test_source_indexing.py  test_sources.py
data/approved_sources/: README.md
data/evaluation/: demo_cases.json
docs/: DEMO_FLOW.md  IMPLEMENTATION_PLAN.md
documentation/: Video-Demo-link.md
frontend/: .dockerignore  index.html  package-lock.json  package.json
frontend/scripts/: smoke.mjs
(+18 files in other folders)
